namespace Game.Values.AnimationParameters
{
    class Enemy
    {
        public const string Fly = "Fly";
        public const string JumpEnd = "JumpEnd";
        public const string Walking = "Walking";
        public const string Jump = "Jump";
        public const string Attack = "Attack";
    }
}
